--- a/ROLES/configNiFi/templates/nifi.properties.j2
+++ b/ROLES/configNiFi/templates/nifi.properties.j2
@@ -174,13 +174,14 @@ nifi.sensitive.props.additional.keys=
 
 nifi.security.autoreload.enabled=false
 nifi.security.autoreload.interval=10 secs
-nifi.security.keystore=./conf/keystore.p12
-nifi.security.keystoreType=PKCS12
-nifi.security.keystorePasswd=7594a2807c515910b04b7d9f87fce8b6
-nifi.security.keyPasswd=7594a2807c515910b04b7d9f87fce8b6
-nifi.security.truststore=./conf/truststore.p12
-nifi.security.truststoreType=PKCS12
-nifi.security.truststorePasswd=74fad1d61557239f9245f1d891ea61e8
+nifi.security.keystore=
+nifi.security.keystoreType=
+nifi.security.keystorePasswd=
+nifi.security.keyPasswd=
+nifi.security.truststore=
+nifi.security.truststoreType=
+nifi.security.truststorePasswd=
+
 nifi.security.user.authorizer=single-user-authorizer
 nifi.security.allow.anonymous.authentication=false
 nifi.security.user.login.identity.provider=single-user-provider
